# HomeNAS

./: README.md  build_deploy.sh  check_file-op-curl.sh  config.json  devlog.md  setup.sh
backend/: CMakeLists.txt  config.json  main.cpp
backend/controllers/: AlertsController.cpp  AlertsController.h  AuthController.cpp  AuthController.h  EventsController.cpp  EventsController.h  FilesystemController.cpp  FilesystemController.h  SyncController.cpp  SyncController.h  UploadController.cpp  UploadController.h
backend/db/: schema_alerts.sql  schema_events.sql
backend/filters/: JwtFilter.cpp  JwtFilter.h
backend/services/: AlertTypes.h  AlertWriter.cpp  AlertWriter.h  EventAnalyzer.cpp  EventAnalyzer.h  EventRecorder.cpp  EventRecorder.h  EventTypes.h  EventWriter.cpp  EventWriter.h  SyncManager.cpp  SyncManager.h  SyncTypes.h
nginx/: nas.conf
sync-portal/: app.js  index.html  style.css
systemd/: nas-backend.service
webui/: app.js  index.html  style.css
